# goblin-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile  mise.toml  pyproject.toml
nginx/: dev.conf
src/: constants.py  git.py  markdown.py  tasks.py  utils.py
src/api/: __init__.py  zk.py
src/services/telegram/: __init__.py  _fleeting_note.py  _start.py
src/templates/: fleeting_note.md
tests/: conftest.py
tests/data/: update_message.json
tests/unit/: test_git.py  test_markdown.py  test_tasks.py
