[project]
name = "goblin-api"
version = "0.1.0"
description = "Web-facing API that exposes access to various personal automation and efficiency tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.121.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    "D", 
    "E501", 
    "S607", # process with partial path
    "S603"  # subprocess without shell
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
line-ending = "auto"

[tool.mypy]
strict = true
warn_unused_ignores = true
exclude = ["venv/", ".venv/"]
